@@ -1,3 +1,8 @@
+2004-01-13  Bastien Nocera  <hadess@hadess.net>
+
+	* gnome-settings-multimedia-keys.c: (acme_filter_events): let's
+	simplify some code
+
 Tue Jan 13 10:48:57 2004  Jonathan Blandford  <jrb@gnome.org>
 
 	* gnome-settings-daemon: Merge in acme.  We now have a variety of
